--- a/app/src/main/res/layout/activity_secondry_address.xml
+++ b/app/src/main/res/layout/activity_secondry_address.xml
@@ -6,22 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".Activity.ManageAddress.SecondryAddressActivity">
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="8dp">
 
-        <Button
+        <TextView
             android:id="@+id/floating_button_add"
+            android:layout_margin="@dimen/margin_5"
+            android:text="@string/add_address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/style_color_primary"
-            android:textStyle="bold"
-            android:layout_margin="@dimen/margin_5"
-            android:text="Add Address"
-            android:drawablePadding="@dimen/margin_10"/>
+            android:textSize="12sp"
+            android:textStyle="normal"
+            android:textAllCaps="true"
+            android:padding="8dp"
+            android:background="@drawable/rzp_border"
+            android:textColor="@color/dark_gray"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>
 
         <View
             android:layout_width="match_parent"
