--- a/app/src/main/res/layout/activity_signup_address.xml
+++ b/app/src/main/res/layout/activity_signup_address.xml
@@ -1,21 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/appRoot"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MapLocation">
 
-    <ScrollView
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="none">
+        android:layout_gravity="center_vertical"
+        android:gravity="center_vertical"
+        android:orientation="vertical">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_margin="@dimen/margin_10"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center">
+            android:layout_gravity="center"
+            android:gravity="center"
+            tools:ignore="UselessParent">
+
+            <TextView
+                android:text="@string/select_your_location_here_by_click_on_icon"
+                android:gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="14sp"
+                android:layout_gravity="center_vertical"
+                android:textColor="@color/black"
+                android:background="@null"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_margin="@dimen/margin_10"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            tools:ignore="UselessParent">
 
             <TextView
                 android:layout_marginStart="10dp"
@@ -26,87 +50,14 @@
                 android:id="@+id/location_et"
                 android:hint="@string/location"
                 android:gravity="center"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="@dimen/margin_100"
                 android:textSize="14sp"
                 android:background="@null"
-                android:drawableLeft="@drawable/ic_my_location_black_24dp"/>
+                android:drawableStart="@drawable/ic_my_location_black_24dp"/>
 
+        </LinearLayout>
 
-            <LinearLayout
-                android:visibility="gone"
-                android:id="@+id/lan_lat"
-                android:layout_below="@+id/location_et"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:weightSum="2"
-                android:layout_marginTop="15dp"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp">
+    </LinearLayout>
 
-                <EditText
-                    android:id="@+id/lat_et"
-                    android:layout_width="0dp"
-                    android:layout_height="50dp"
-                    android:inputType="text"
-                    android:layout_weight="1"
-                    android:hint="@string/latitude"
-                    android:textSize="16sp"
-                    android:textColor="#000"
-                    android:padding="10dp"
-                    android:layout_marginEnd="5dp"
-                    android:background="#ffffff"/>
-
-                <EditText
-                    android:id="@+id/lng_et"
-                    android:layout_width="0dp"
-                    android:layout_height="50dp"
-                    android:layout_weight="1"
-                    android:hint="@string/longitude"
-                    android:textSize="16sp"
-                    android:textColor="#000"
-                    android:inputType="text"
-                    android:padding="10dp"
-                    android:layout_marginStart="5dp"
-                    android:background="#ffffff"/>
-
-                <EditText
-                    android:id="@+id/editTextPinCode"
-                    android:layout_width="0dp"
-                    android:layout_height="50dp"
-                    android:layout_weight="1"
-                    android:hint="@string/longitude"
-                    android:textSize="16sp"
-                    android:textColor="#000"
-                    android:inputType="text"
-                    android:padding="10dp"
-                    android:visibility="gone"
-                    android:layout_marginStart="5dp"
-                    android:background="#ffffff"/>
-
-            </LinearLayout>
-
-            <com.google.android.gms.maps.MapView
-                android:visibility="gone"
-                android:layout_width="match_parent"
-                android:layout_height="350dp"
-                android:layout_below="@id/lan_lat"
-                android:id="@+id/google_map_view"
-                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"/>
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:ems="15"
-                android:id="@+id/save_map"
-                android:layout_below="@+id/google_map_view"
-                android:textColor="#ffffff"
-                android:text="@string/save_location"
-                android:background="@drawable/rounded"
-                android:layout_margin="10dp"
-                android:layout_centerHorizontal="true"
-                android:layout_alignParentBottom="true"/>
-        </RelativeLayout>
-    </ScrollView>
-
-</RelativeLayout>
+</LinearLayout>
