--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -1,277 +1,115 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:focusable="true"
+    android:layout_marginBottom="10dp"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/card_view"
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/topToolBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardElevation="2dp"
-        app:cardUseCompatPadding="true">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
+        tools:ignore="NewApi" />
 
-        <RelativeLayout
-            android:layout_width="fill_parent"
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/addressViews"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/topToolBar">
+
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/imgOrigin"
+            android:layout_width="@dimen/activity_horizontal_margin"
+            android:layout_height="@dimen/activity_horizontal_margin"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintBottom_toBottomOf="@+id/inputOrigin"
+            app:layout_constraintEnd_toStartOf="@+id/inputOrigin"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/inputOrigin"
+            app:srcCompat="@drawable/ic_location"
+            app:tint="@color/colorAccent" />
+
+
+        <View
+            android:layout_width="2dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/ic_phone"
+            app:layout_constraintBottom_toTopOf="@+id/imgDestination"
+            app:layout_constraintEnd_toEndOf="@+id/imgOrigin"
+            app:layout_constraintStart_toStartOf="@+id/imgOrigin"
+            app:layout_constraintTop_toBottomOf="@+id/imgOrigin" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/inputOrigin"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="10dp">
+            android:layout_marginTop="10dp"
+            android:hint="pick_up_location"
+            android:marqueeRepeatLimit="marquee_forever"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imgOrigin"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <!-- Product Image -->
-
-            <LinearLayout
-                android:id="@+id/idLinearLayoutProductImage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true">
-
-                <ImageView
-                    android:id="@+id/product_image"
-                    android:layout_width="100dp"
-                    android:layout_height="@dimen/margin_80"
-                    android:scaleType="fitXY"/>
-
-            </LinearLayout>
-
-            <!-- Rest of the product info and add/remove to/from cart symbols -->
-
-            <LinearLayout
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edtOrigin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:orientation="horizontal"
-                android:weightSum="2"
-                android:id="@+id/idTopLayout">
+                android:background="@color/white"
+                android:inputType="textPostalAddress"
+                android:singleLine="true" />
 
-                <LinearLayout
-                    android:layout_weight="1.8"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/product_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="110dp"
-                        android:textSize="14sp"
-                        android:textStyle="normal"
-                        android:textAllCaps="false"
-                        android:textColor="@color/dark_gray"
-                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>
-
-                    <TextView
-                        android:id="@+id/product_attribute"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/margin_5"
-                        android:layout_marginStart="110dp"
-                        android:textSize="12sp"
-                        android:textColor="@android:color/darker_gray"
-                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>
-
-                    <RatingBar
-                        android:id="@+id/rating"
-                        android:layout_marginTop="@dimen/margin_5"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="110dp"
-                        android:numStars="5"
-                        android:rating="4"
-                        style="?android:attr/ratingBarStyleSmall"
-                        android:theme="@style/RatingBar"/>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginStart="110dp"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/item_displayrate"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textSize="12sp"
-                            tools:textColor="@android:color/darker_gray"
-                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>
-
-                        <TextView
-                            android:id="@+id/total_amount"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textSize="12sp"
-                            android:paddingLeft="@dimen/margin_10"
-                            android:textColor="@color/gen_black"
-                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>
-
-                    </LinearLayout>
-
-                    <TextView
-                        android:layout_marginTop="5dp"
-                        android:layout_marginLeft="100dp"
-                        android:id="@+id/item_discount"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="12sp"
-                        android:text="33 %"
-                        android:paddingLeft="@dimen/margin_10"
-                        android:textColor="@color/red"
-                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="20dp"
-                    android:layout_weight="0.3"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:id="@+id/add_item_layout"
-                        android:layout_width="80dp"
-                        android:layout_height="30dp"
-                        android:visibility="visible"
-                        android:background="@drawable/round_border_button"
-                        android:orientation="vertical">
-
-                        <FrameLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_gravity="center">
-
-                            <TextView
-                                android:id="@+id/add_"
-                                android:layout_width="wrap_content"
-                                android:layout_height="30dp"
-                                android:layout_gravity="center"
-                                android:gravity="center"
-                                android:text="@string/add"
-                                android:textColor="@color/gray_btn_bg_pressed_color"
-                                android:textSize="12sp"
-                                android:visibility="visible"
-                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>
-
-                            <LinearLayout
-                                android:id="@+id/quantity_ll"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_gravity="center"
-                                android:gravity="center"
-                                android:orientation="horizontal"
-                                android:visibility="gone">
-
-                                <TextView
-                                    android:id="@+id/remove_item"
-                                    android:layout_width="30dp"
-                                    android:layout_height="wrap_content"
-                                    android:gravity="center"
-                                    android:text="-"
-                                    android:textColor="@color/red"
-                                    android:textSize="20sp"
-                                    android:textStyle="bold"
-                                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>
-
-                                <TextView
-                                    android:id="@+id/item_count"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:gravity="center"
-                                    android:paddingLeft="5dp"
-                                    android:paddingEnd="5dp"
-                                    android:text="1"
-                                    android:textColor="@color/gen_black"
-                                    android:textSize="14sp"
-                                    android:textStyle="normal"
-                                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>
-
-                                <TextView
-                                    android:id="@+id/add_item"
-                                    android:layout_width="30dp"
-                                    android:layout_height="wrap_content"
-                                    android:gravity="center"
-                                    android:paddingEnd="5dp"
-                                    android:text="+"
-                                    android:textColor="@color/red"
-                                    android:textSize="20sp"
-                                    android:textStyle="bold"
-                                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>
-
-                            </LinearLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
 
-                            <TextView
-                                android:id="@+id/item_not_in_stock"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:gravity="center"
-                                android:text="Not in Stock"
-                                android:textColor="@color/red"
-                                android:textSize="12sp"
-                                android:visibility="gone"
-                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/imgDestination"
+            android:layout_width="@dimen/activity_horizontal_margin"
+            android:layout_height="@dimen/activity_horizontal_margin"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintBottom_toBottomOf="@+id/inputDestination"
+            app:layout_constraintEnd_toStartOf="@+id/inputDestination"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/inputDestination"
+            app:srcCompat="@drawable/ic_location"
+            app:tint="@color/colorPrimaryDark" />
 
-                        </FrameLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/inputDestination"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:hint="search_destination"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imgDestination"
+            app:layout_constraintTop_toBottomOf="@id/inputOrigin">
 
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/order_not_accepting"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:visibility="gone"
-                        android:orientation="vertical">
-
-                        <FrameLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_gravity="center">
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:gravity="center"
-                                android:text="Order Not Accepting"
-                                android:textColor="@color/red"
-                                android:textSize="12sp"
-                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>
-
-                        </FrameLayout>
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/idBottomLayout"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edtDestination"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_below="@+id/idTopLayout">
+                android:background="@color/white"
+                android:inputType="textPostalAddress"
+                android:singleLine="true"/>
 
-                <TextView
-                    android:id="@+id/item_description"
-                    android:layout_marginTop="@dimen/margin_5"
-                    android:layout_marginBottom="@dimen/margin_5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="110dp"
-                    android:text="@string/message_txt"
-                    android:textSize="12sp"
-                    android:textStyle="normal"
-                    android:textColor="@color/dark_gray"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
-            </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-        </RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
-    </androidx.cardview.widget.CardView>
-
-</LinearLayout>
