--- a/app/src/main/res/layout/recyclerview_address.xml
+++ b/app/src/main/res/layout/recyclerview_address.xml
@@ -12,14 +12,43 @@
         android:background="@color/white"
         android:orientation="vertical">
 
+       <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:orientation="horizontal"
+           android:layout_marginStart="@dimen/margin_10"
+           android:weightSum="2">
+
+           <TextView
+               android:id="@+id/location_tag"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:textColor="@color/text_color"
+               android:textStyle="bold"
+               android:textSize="14sp"
+               android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>
+
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:textColor="@color/text_color"
+               android:textStyle="bold"
+               android:layout_marginStart="@dimen/margin_20"
+               android:textSize="14sp"
+               android:drawableEnd="@drawable/ic_location_on"
+               android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>
+
+       </LinearLayout>
         <TextView
-            android:id="@+id/location_tag"
-            android:layout_width="wrap_content"
+            android:id="@+id/sub_address"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textStyle="bold"
+            android:layout_weight="1"
+            android:layout_marginTop="@dimen/margin_10"
             android:layout_marginStart="@dimen/margin_10"
-            android:textSize="14sp"
+            android:layout_marginEnd="@dimen/margin_10"
+            android:textSize="12sp"
+            android:textColor="@color/gray_btn_bg_pressed_color"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>
 
         <LinearLayout
@@ -43,15 +72,15 @@
             <TextView
                 android:layout_weight="1"
                 android:id="@+id/edit_address"
-                android:layout_width="@dimen/margin_100"
+                android:layout_width="@dimen/margin_50"
                 android:layout_height="@dimen/margin_50"
-                android:gravity="left"
-                android:layout_gravity="left"
-                android:paddingEnd="@dimen/margin_10"
+                android:gravity="end"
+                android:layout_gravity="end"
                 android:drawableRight="@drawable/ic_more"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>
 
         </LinearLayout>
+
     </LinearLayout>
 
 
