--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/country_name"
-    android:textColor="@color/gray_btn_bg_color"
+    android:id="@+id/textView"
+    android:textColor="@color/text_color"
     android:textSize="14dp"
     android:gravity="center"
-    android:padding="10dp"
     android:text="manthan"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="25dp"
     android:singleLine="true" />
