--- a/app/src/main/res/menu/cart_menu.xml
+++ b/app/src/main/res/menu/cart_menu.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/action_cart"
         android:title="@string/cart"
         android:icon="@drawable/ic_menu_notifications"
         app:showAsAction="collapseActionView|ifRoom" />
 
     <item android:id="@+id/action_searchresult"
-        android:title="@string/search"
+        android:title="@string/search_products"
         android:icon="@drawable/ic_search"
         app:showAsAction="collapseActionView|ifRoom"/>
 
