--- a/app/src/main/res/layout/activity_recieved_order_details.xml
+++ b/app/src/main/res/layout/activity_recieved_order_details.xml
@@ -11,7 +11,8 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fillViewport="true">
+        android:fillViewport="true"
+        tools:ignore="UselessParent">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardlist_item"
@@ -21,13 +22,23 @@
             android:orientation="vertical"
             card_view:cardBackgroundColor="@android:color/white"
             card_view:cardCornerRadius="4dp"
-            card_view:cardElevation="@dimen/cardview_default_elevation">
+            card_view:cardElevation="@dimen/cardview_default_elevation"
+            tools:ignore="PrivateResource">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="@dimen/margin_20"
             android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/order_image"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_margin="5dp"
+                android:layout_gravity="center"
+                android:background="@color/smoke_white"
+                android:scaleType="fitXY"
+                android:contentDescription="@string/up_to_u20b9_200_free_delivery" />
 
             <TextView
                 android:id="@+id/order_id"
@@ -35,8 +46,8 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:textColor="@color/style_color_primary"
-                android:textStyle="normal"
-                android:textSize="14sp"/>
+                android:textStyle="bold"
+                android:textSize="16sp"/>
 
             <TextView
                 android:id="@+id/product_name"
@@ -44,8 +55,8 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:textColor="@color/style_color_primary"
-                android:textStyle="normal"
-                android:textSize="14sp"/>
+                android:textStyle="bold"
+                android:textSize="16sp"/>
 
             <TextView
                 android:id="@+id/product_sellRate"
@@ -53,8 +64,8 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:textColor="@color/style_color_primary"
-                android:textStyle="normal"
-                android:textSize="14sp"/>
+                android:textStyle="bold"
+                android:textSize="16sp"/>
 
             <TextView
                 android:id="@+id/product_displayRate"
@@ -62,8 +73,8 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:textColor="@color/style_color_primary"
-                android:textStyle="normal"
-                android:textSize="14sp"/>
+                android:textStyle="bold"
+                android:textSize="16sp"/>
 
             <TextView
                 android:id="@+id/product_discount"
@@ -71,8 +82,8 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:textColor="@color/style_color_primary"
-                android:textStyle="normal"
-                android:textSize="14sp"/>
+                android:textStyle="bold"
+                android:textSize="16sp"/>
 
             <TextView
                 android:id="@+id/product_quantity"
@@ -80,8 +91,8 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:textColor="@color/style_color_primary"
-                android:textStyle="normal"
-                android:textSize="14sp"/>
+                android:textStyle="bold"
+                android:textSize="16sp"/>
 
             <TextView
                 android:id="@+id/product_totalAmount"
@@ -89,8 +100,8 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:textColor="@color/style_color_primary"
-                android:textStyle="normal"
-                android:textSize="14sp"/>
+                android:textStyle="bold"
+                android:textSize="16sp"/>
 
             <TextView
                 android:id="@+id/firm_id"
@@ -98,18 +109,38 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:textColor="@color/style_color_primary"
-                android:textStyle="normal"
-                android:textSize="14sp"/>
+                android:textStyle="bold"
+                android:textSize="16sp"/>
 
             <TextView
                 android:id="@+id/order_weight"
-                android:visibility="gone"
+                android:visibility="visible"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:textColor="@color/style_color_primary"
-                android:textStyle="normal"
-                android:textSize="14sp"/>
+                android:textStyle="bold"
+                android:textSize="16sp"/>
+
+            <TextView
+                android:id="@+id/order_size"
+                android:visibility="visible"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:textColor="@color/style_color_primary"
+                android:textStyle="bold"
+                android:textSize="16sp"/>
+
+            <TextView
+                android:id="@+id/order_color"
+                android:visibility="visible"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:textColor="@color/style_color_primary"
+                android:textStyle="bold"
+                android:textSize="16sp"/>
 
             <TextView
                 android:id="@+id/firm_address"
@@ -117,8 +148,10 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:textColor="@color/style_color_primary"
-                android:textStyle="normal"
-                android:textSize="14sp"/>
+                android:textStyle="bold"
+                android:textSize="16sp"/>
+
+
         </LinearLayout>
 
         </androidx.cardview.widget.CardView>
