--- a/app/src/main/res/layout/item_horizontal_layout.xml
+++ b/app/src/main/res/layout/item_horizontal_layout.xml
@@ -37,8 +37,9 @@
 
                     <ImageView
                         android:id="@+id/item_image"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:layout_gravity="center_vertical"
                         android:scaleType="fitXY"/>
 
                 </LinearLayout>
