--- a/app/src/main/res/layout/recieved_orders_cardview.xml
+++ b/app/src/main/res/layout/recieved_orders_cardview.xml
@@ -167,6 +167,7 @@
                     android:textColor="@color/style_color_primary" />
 
                 <TextView
+                    android:layout_weight="1"
                     android:id="@+id/order_totalAmount"
                     android:layout_margin="2dp"
                     android:layout_width="wrap_content"
@@ -176,16 +177,45 @@
                     android:textStyle="normal"
                     android:textColor="@color/style_color_primary" />
 
+             <LinearLayout
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:orientation="horizontal"
+                 android:layout_margin="3dp"
+                 android:weightSum="3">
+                 <TextView
+                     android:layout_weight="1"
+                     android:id="@+id/order_address"
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content"
+                     android:textAllCaps="false"
+                     android:textSize="12sp"
+                     android:text="@string/appbar_scrolling_view_behavior"
+                     android:textStyle="normal"
+                     android:gravity="start"
+                     android:textColor="@color/style_color_primary" />
 
-                <TextView
-                    android:id="@+id/order_address"
-                    android:layout_margin="2dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAllCaps="false"
-                    android:textSize="12sp"
-                    android:textStyle="normal"
-                    android:textColor="@color/style_color_primary" />
+                 <View
+                     android:layout_weight="1"
+                     android:visibility="visible"
+                     android:layout_width="0dp"
+                     android:layout_height="0dp"/>
+
+                 <androidx.appcompat.widget.AppCompatButton
+                     android:layout_weight="1.9"
+                     android:id="@+id/change_order_address"
+                     android:layout_width="match_parent"
+                     android:layout_height="@dimen/margin_30"
+                     android:layout_gravity="end"
+                     android:padding="@dimen/margin_5"
+                     android:text="Change Address"
+                     android:background="@color/smoke_white"
+                     android:textAllCaps="false"
+                     android:textColor="@color/style_color_primary"
+                     android:textSize="12sp"
+                     android:visibility="gone" />
+             </LinearLayout>
+
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:layout_margin="@dimen/margin_10"
@@ -195,10 +225,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/margin_30"
                     android:gravity="center"
-                    android:background="@drawable/round_border_button"
+                    android:background="@drawable/rzp_border"
                     android:textColor="@color/style_color_primary"
                     android:textAllCaps="false"
                     android:textSize="14sp"
+                    android:drawableEnd="@drawable/ic_arrow_drop_down"
                     android:layout_gravity="end"
                     android:text="Order Details" />
 
@@ -223,6 +254,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:scrollbars="none"
+                    android:layoutAnimation="@anim/layout_animation_fall_down"
                     card_view:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
             </LinearLayout>
 
@@ -248,7 +280,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/margin_30"
                         android:gravity="center"
-                        android:background="@drawable/round_border_button"
+                        android:background="@drawable/rzp_border"
                         android:textColor="@color/style_color_primary"
                         android:text="Pending"
                         android:layout_margin="2dp"
@@ -262,7 +294,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/margin_30"
                         android:gravity="center"
-                        android:background="@drawable/round_border_button"
+                        android:background="@drawable/rzp_border"
                         android:textColor="@color/style_color_primary"
                         android:text="Prepairing"
                         android:layout_margin="2dp"
@@ -278,7 +310,7 @@
                         android:gravity="center"
                         android:padding="-10dp"
                         android:layout_margin="2dp"
-                        android:background="@drawable/round_border_button"
+                        android:background="@drawable/rzp_border"
                         android:textColor="@color/style_color_primary"
                         android:text="On the way"
                         android:textAllCaps="false"
@@ -302,7 +334,7 @@
                         android:layout_height="@dimen/margin_30"
                         android:gravity="center"
                         android:layout_margin="2dp"
-                        android:background="@drawable/round_border_button"
+                        android:background="@drawable/rzp_border"
                         android:textColor="@color/style_color_primary"
                         android:text="Cancel"
                         android:textAllCaps="false"
@@ -316,7 +348,7 @@
                         android:layout_height="@dimen/margin_30"
                         android:gravity="center"
                         android:layout_margin="2dp"
-                        android:background="@drawable/round_border_button"
+                        android:background="@drawable/rzp_border"
                         android:textColor="@color/style_color_primary"
                         android:text="Delivered"
                         android:textAllCaps="false"
