--- a/app/src/main/res/layout/activity_edit_category.xml
+++ b/app/src/main/res/layout/activity_edit_category.xml
@@ -65,6 +65,7 @@
 
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:visibility="gone"
             android:id="@+id/add_category"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
