--- a/app/src/main/res/layout/activity_start_edit_category.xml
+++ b/app/src/main/res/layout/activity_start_edit_category.xml
@@ -26,6 +26,8 @@
             android:orientation="vertical">
 
             <com.google.android.material.textfield.TextInputLayout
+                android:focusable="false"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -39,6 +41,8 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
+                android:focusable="false"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:visibility="visible"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -53,6 +57,8 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
+                android:focusable="false"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
