--- a/app/src/main/res/layout/cooks_promotion_adapter.xml
+++ b/app/src/main/res/layout/cooks_promotion_adapter.xml
@@ -14,7 +14,6 @@
         card_view:cardCornerRadius="0dp"
         card_view:contentPadding="0dp"
         card_view:cardElevation="4dp"
-        card_view:cardBackgroundColor="@android:color/white"
         card_view:cardUseCompatPadding="true" >
 
         <FrameLayout
@@ -65,6 +64,13 @@
                 android:layout_height="@dimen/margin_30"/>
 
         </LinearLayout>
+
+            <CheckBox
+                android:id="@+id/checkbox"
+                android:checked="false"
+                android:layout_width="@dimen/margin_30"
+                android:layout_height="@dimen/margin_30"
+                android:layout_gravity="bottom|end"/>
 
         </FrameLayout>
 
