--- a/app/src/main/res/layout/recieved_orders_cardview.xml
+++ b/app/src/main/res/layout/recieved_orders_cardview.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:background="@color/white"
     android:layout_height="wrap_content">
 
@@ -25,95 +26,121 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_margin="@dimen/margin_10"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:weightSum="2"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content">
 
                 <LinearLayout
+                    android:layout_margin="@dimen/margin_10"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
+                    android:orientation="horizontal">
 
-                    <ImageView
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:visibility="gone"
+                            android:id="@+id/product_thumb"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:layout_marginLeft="12dp"
+                            android:layout_marginStart="12dp"
+                            android:layout_marginTop="10dp"
+                            android:gravity="center"
+                            android:textColor="@android:color/white"
+                            android:textSize="20sp" />
+
+                        <TextView
+                            android:layout_margin="2dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textAllCaps="false"
+                            android:textSize="16sp"
+                            android:textStyle="normal"
+                            android:text="Order ID"
+                            android:textColor="@color/black" />
+
+                        <TextView
+                            android:id="@+id/order_id"
+                            android:layout_margin="2dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textAllCaps="false"
+                            android:textSize="14sp"
+                            android:textStyle="bold"
+                            android:text="Hello"
+                            android:textColor="@color/green_light" />
+
+                    </LinearLayout>
+
+                    <com.airbnb.lottie.LottieAnimationView
+                        android:id="@+id/lottie_delivery"
                         android:visibility="gone"
-                        android:id="@+id/product_thumb"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:layout_marginLeft="12dp"
-                        android:layout_marginStart="12dp"
-                        android:layout_marginTop="10dp"
-                        android:gravity="center"
-                        android:textColor="@android:color/white"
-                        android:textSize="20sp" />
+                        android:layout_width="150dp"
+                        android:layout_height="@dimen/margin_50"
+                        card_view:lottie_fileName="delivery.json"
+                        card_view:lottie_loop="true"
+                        android:fitsSystemWindows="true"
+                        card_view:lottie_autoPlay="true"/>
 
-                    <TextView
-                        android:layout_margin="2dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textAllCaps="false"
-                        android:textSize="16sp"
-                        android:textStyle="normal"
-                        android:text="Order ID"
-                        android:textColor="@color/black" />
+                    <com.airbnb.lottie.LottieAnimationView
+                        android:id="@+id/lottie_prepaire"
+                        android:visibility="gone"
+                        android:layout_width="150dp"
+                        android:layout_height="@dimen/margin_50"
+                        card_view:lottie_fileName="packaging.json"
+                        card_view:lottie_loop="true"
+                        android:fitsSystemWindows="true"
+                        card_view:lottie_autoPlay="true"/>
 
-                    <TextView
-                        android:id="@+id/order_id"
-                        android:layout_margin="2dp"
-                        android:layout_width="wrap_content"
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textAllCaps="false"
-                        android:textSize="14sp"
-                        android:textStyle="bold"
-                        android:text="Hello"
-                        android:textColor="@color/green_light" />
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/image"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginBottom="5dp"
+                            android:layout_marginEnd="@dimen/margin_12"
+                            android:layout_width="15dp"
+                            android:layout_height="15dp"
+                            android:background="@drawable/rounded"
+                            android:ellipsize="marquee"
+                            android:focusable="false"
+                            android:freezesText="true"
+                            android:layout_gravity="end"
+                            android:marqueeRepeatLimit="marquee_forever"
+                            android:paddingRight="30dp"
+                            android:scrollHorizontally="true"
+                            android:singleLine="true"
+                            android:textColor="@android:color/background_dark"
+                            android:visibility="visible"  />
+
+                        <TextView
+                            android:id="@+id/item_status"
+                            android:layout_margin="2dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textAllCaps="false"
+                            android:textSize="14sp"
+                            android:textStyle="bold"
+                            android:text="@string/status"
+                            android:layout_gravity="end"
+                            android:textColor="@color/black" />
+
+                    </LinearLayout>
+
 
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/image"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginBottom="5dp"
-                        android:layout_marginEnd="@dimen/margin_12"
-                        android:layout_width="15dp"
-                        android:layout_height="15dp"
-                        android:background="@drawable/rounded"
-                        android:ellipsize="marquee"
-                        android:focusable="false"
-                        android:freezesText="true"
-                        android:layout_gravity="end"
-                        android:marqueeRepeatLimit="marquee_forever"
-                        android:paddingRight="30dp"
-                        android:scrollHorizontally="true"
-                        android:singleLine="true"
-                        android:textColor="@android:color/background_dark"
-                        android:visibility="visible"  />
-
-                    <TextView
-                        android:id="@+id/item_status"
-                        android:layout_margin="2dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textAllCaps="false"
-                        android:textSize="14sp"
-                        android:textStyle="bold"
-                        android:text="@string/status"
-                        android:layout_gravity="end"
-                        android:textColor="@color/black" />
-
-                </LinearLayout>
-
-
-            </LinearLayout>
+            </FrameLayout>
             <View
                 android:id="@+id/line"
                 android:layout_width="match_parent"
